[package]
name = "docksymphony"
version = "0.1.0"
edition = "2021"
authors = ["Alice Carra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tera = "1.19.1"
tokio = { version = "1.35.1", features = ["full"] }
